added link to repository

--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
 <body>
     <h1>Zombie Escape</h1>
     <p class="bold">written by
-        <a href="#">PJ623</a>
+        <a href="https://github.com/PJ623/zombie-escape">PJ623</a>
     </p>
 
     <div id="wrapper">
